gitops/manifests/media/bazarr/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      nodeSelector:
          kubernetes.io/hostname: stuart 
      securityContext:
        runAsUser: 327  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321 
      containers:
        - name: bazarr
          image: ghcr.io/hotio/bazarr:release-8d54473
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 6767 
          resources:
            requests:
              memory: "500Mi"  
              cpu: "300m"      
            limits:
              memory: "1G"  
              cpu: "500m"
          volumeMounts:
            - mountPath: /config  
              name: config-storage
            - mountPath: /data 
              name: media-storage
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: pvc-bazarr-config # PVC for config storage
        - name: media-storage
          persistentVolumeClaim:
            claimName: pvc-media   # PVC for data storage
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 6767 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "100"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "100"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "100"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "100"
spec:
  ingressClassName: nginx
  rules:
  - host: bazarr.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 80
  tls:
  - hosts:
      - bazarr.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
